--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,5 +46,13 @@
             android:layout_weight="1"
             android:text="ACCEDER"
             android:layout_margin="10dp"/>
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonedit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="edit" />
 </LinearLayout>
