--- a/app/src/main/res/layout/activity_newpet.xml
+++ b/app/src/main/res/layout/activity_newpet.xml
@@ -32,7 +32,7 @@
             >
 
             <EditText
-                android:id="@+id/nombre"
+                android:id="@+id/edittextnombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -40,7 +40,7 @@
                 android:hint="Nombre"/>
 
             <EditText
-                android:id="@+id/raza"
+                android:id="@+id/edittextraza"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -104,7 +104,7 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/buttonguardar"
+            android:id="@+id/buttonnueva"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
