--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -33,7 +33,7 @@
             >
 
             <EditText
-                android:id="@+id/nombre"
+                android:id="@+id/edittextnombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -41,7 +41,7 @@
                 android:text="lua" />
 
             <EditText
-                android:id="@+id/raza"
+                android:id="@+id/edittextraza"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -102,12 +102,6 @@
         android:layout_width="match_parent"
         android:id="@+id/relativeabajo"
         android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/test"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test" />
 
         <Button
             android:id="@+id/buttonguardar"
