- addded imagebutton newpet

--- a/app/src/main/res/layout/activity_listado.xml
+++ b/app/src/main/res/layout/activity_listado.xml
@@ -5,16 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Listado">
-
-    <Button
-        android:id="@+id/buttonpata"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="pata"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="20dp"/>
-
     <TextView
         android:id="@+id/textViewempty"
         android:layout_width="wrap_content"
@@ -31,4 +21,16 @@
         android:layout_height="match_parent">
 
     </ListView>
+
+    <ImageButton
+        android:id="@+id/buttonpata"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="fitCenter"
+        android:background="@null"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="15dp"
+        app:srcCompat="@drawable/patabutton"
+        />
 </RelativeLayout>
